--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body,
 
 h2 {
   text-align: center;
+  color: chocolate;
 }
 
 body {
@@ -44,6 +45,11 @@ header {
   margin: 0 auto;
   max-width: 1000px;
   padding: 30px 40px;
+}
+
+.fab {
+  color: black;
+  text-align: center;
 }
 
 .card-header::after {
