--- a/style.css
+++ b/style.css
@@ -1,152 +1,7 @@
-/* *,
-*::before,
-*::after {
-  box-sizing: border-box;
+
+#toggles{
+  margin: 15px;
 }
-
-html,
-body,
-.wrapper {
-  height: 100%;
-  margin: 50px;
-  padding: 0;
-}
-
-p {
-  text-align: left;
-}
-
-h1 {
-  text-align: center;
-  color: rgb(255, 255, 255);
-}
-
-body {
-  font-family: sans-serif;
-  background-color: #924646;
-}
-
-.wrapper {
-  padding-top: 30px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-header {
-  text-align: center;
-  padding: 20px;
-  color: hsl(206, 17%, 28%);
-}
-
-.card {
-  background: linear-gradient(to bottom right, #666699 20%, #669999 80%);
-  border-radius: 50px;
-  border-width: 1px;
-  box-shadow: rgba(0, 0, 0, .5) 10px 10px 10px .5px;
-  color: hsl(206, 72%, 55%);
-  font-size: 20px;
-  margin: 0 auto;
-  max-width: 1000px;
-  padding: 30px 40px;
-}
-
-.fab {
-  color: black;
-  
-}
-
-.card-header::after {
-  
-  display: block;
-  width: 100%;
-  background: #e7e9eb;
-  height: 2px;
-}
-
-.card-body {
-  min-height: 100px;
-}
-
-.card-footer {
-  text-align: center;
-}
-
-.card-footer::before {
-
-  display: block;
-  width: 100%;
-  background: #e7e9eb;
-  height: 2px;
-}
-
-.card-footer::after {
-  
-  display: block;
-  clear: both;
-}
-
-.btn {
-  border: none;
-  background-color: rgb(255, 255, 255);
-  border-radius: 10px;
-  box-shadow: 4px -4px 4px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  color: hsl(206, 72%, 55%);
-  display: inline-block;
-  font-size: 22px;
-  line-height: 22px;
-  margin: 16px 16px 16px 20px;
-  padding: 14px 34px;
-  text-align: center;
-  cursor: pointer;
-}
-
-button[disabled] {
-  cursor: default;
-  background: #c0c7cf;
-}
-
-.float-right {
-  float: right;
-}
-
-#password {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: none;
-  display: block;
-  width: 100%;
-  padding-top: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 15px;
-  font-size: 1.5rem;
-  text-align: center;
-  margin-top: 15px;
-  margin-bottom: 10px;
-  border: 3px ridge #4884c9;
-  border-radius: 6px;
-  resize: none;
-  overflow: hidden;
-}
-
-@media (max-width: 690px) {
-  .btn {
-    font-size: 1rem;
-    margin: 16px 0px 0px 0px;
-    padding: 10px 15px;
-  }
-
-  #password {
-    font-size: 1rem;
-  }
-}
-
-@media (max-width: 500px) {
-  .btn {
-    font-size: 0.8rem;
-  }
-} */
 
 .custom-control-input:checked ~ .custom-control-label::before {
   
